crates/warden-jarmeta/tests/snapshots/corpus__neoforge-1.21.1-create.snap
---
source: crates/warden-jarmeta/tests/corpus.rs
description: "neoforge-1.21.1-create (Minecraft 1.21.1, loader neoforge)"
---
{
  "descriptors": [
    "neoForgeModsToml",
    "jarJarMetadata",
    "manifest"
  ],
  "mods": [
    {
      "source": "neoForgeModsToml",
      "loader": "neoForge",
      "id": "create",
      "version": "6.0.10",
      "name": "Create",
      "description": "Technology that empowers the player.",
      "authors": [
        "simibubi"
      ],
      "licenses": [
        "Read attached LICENSE.md"
      ],
      "dependencies": [
        {
          "id": "neoforge",
          "kind": "required",
          "range": {
            "dialect": "maven",
            "spec": "[21.1.219,)"
          }
        },
        {
          "id": "minecraft",
          "kind": "required",
          "range": {
            "dialect": "maven",
            "spec": "[1.21.1]"
          }
        },
        {
          "id": "flywheel",
          "kind": "required",
          "range": {
            "dialect": "maven",
            "spec": "[1.0.0,2.0)"
          },
          "side": "client",
          "ordering": "after"
        },
        {
          "id": "ponder",
          "kind": "required",
          "range": {
            "dialect": "maven",
            "spec": "[1.0.82,)"
          },
          "ordering": "after"
        },
        {
          "id": "sodium",
          "kind": "optional",
          "range": {
            "dialect": "maven",
            "spec": "[0.6.9,)"
          },
          "side": "client",
          "reason": "Versions before 0.6.9 do not include the neccesary APIs Create needs to work properly with Sodium."
        },
        {
          "id": "lithium",
          "kind": "optional",
          "range": {
            "dialect": "maven",
            "spec": "[0.14.7,)"
          },
          "reason": "Versions before 0.14.7 crash when paired with Create, Update Lithium."
        },
        {
          "id": "journeymap",
          "kind": "optional",
          "range": {
            "dialect": "maven",
            "spec": "[1.21.1-6.0.0-beta.46,)"
          },
          "side": "client",
          "reason": "Versions before 1.21.1-6.0.0-beta.46 do not contain the APIs Create requires to work with JourneyMap."
        },
        {
          "id": "xaeroworldmap",
          "kind": "optional",
          "range": {
            "dialect": "maven",
            "spec": "[1.40.2,)"
          },
          "side": "client",
          "reason": "Versions before 1.40.2 do not contain the classes Create requires to work with Xaero's World Map."
        },
        {
          "id": "radium",
          "kind": "incompatible",
          "range": {
            "dialect": "any"
          },
          "reason": "Radium is a unofficial port of Lithium, Lithium is now natively available for NeoForge and does not suffer from the same issues radium does, use Lithium instead."
        },
        {
          "id": "palladium",
          "kind": "incompatible",
          "range": {
            "dialect": "any"
          },
          "reason": "Palladium does not improve memory usage by anything meaningful, and results in broken visuals for Create's blocks with connected textures."
        }
      ],
      "minecraft": {
        "dialect": "maven",
        "spec": "[1.21.1]"
      },
      "loaderVersion": {
        "dialect": "maven",
        "spec": "[21.1.219,)"
      },
      "mixins": [
        "create.mixins.json"
      ]
    }
  ],
  "languageLoader": {
    "name": "javafml",
    "version": {
      "dialect": "maven",
      "spec": "[0,)"
    }
  },
  "manifest": {
    "mixinConfigs": [
      "create.mixins.json"
    ],
    "implementationTitle": "Create",
    "implementationVersion": "6.0.10"
  },
  "classVersion": {
    "major": 65,
    "minor": 0
  },
  "nested": [
    {
      "path": "META-INF/jarjar/Registrate-MC1.21-1.3.0+67.jar",
      "declaredBy": "jarJarMetadata",
      "jarjar": {
        "group": "com.tterrag.registrate",
        "artifact": "Registrate",
        "artifactVersion": "MC1.21-1.3.0+67",
        "range": {
          "dialect": "maven",
          "spec": "[MC1.21-1.3.0+67,)"
        }
      },
      "metadata": {
        "descriptors": [
          "manifest"
        ],
        "manifest": {
          "fmlModType": "GAMELIBRARY"
        },
        "classVersion": {
          "major": 65,
          "minor": 0
        }
      }
    },
    {
      "path": "META-INF/jarjar/flywheel-neoforge-1.21.1-1.0.6.jar",
      "declaredBy": "jarJarMetadata",
      "jarjar": {
        "group": "dev.engine-room.flywheel",
        "artifact": "flywheel-neoforge-1.21.1",
        "artifactVersion": "1.0.6",
        "range": {
          "dialect": "maven",
          "spec": "[1.0.6,2.0)"
        }
      },
      "metadata": {
        "descriptors": [
          "neoForgeModsToml",
          "manifest"
        ],
        "mods": [
          {
            "source": "neoForgeModsToml",
            "loader": "neoForge",
            "id": "flywheel",
            "version": "1.0.6",
            "name": "Flywheel",
            "description": "An overhauled entity and block entity rendering API.",
            "authors": [
              "Jozufozu, PepperCode1"
            ],
            "licenses": [
              "MIT"
            ],
            "dependencies": [
              {
                "id": "minecraft",
                "kind": "required",
                "range": {
                  "dialect": "maven",
                  "spec": "[1.21.1,1.21.2)"
                },
                "side": "client"
              },
              {
                "id": "neoforge",
                "kind": "required",
                "range": {
                  "dialect": "maven",
                  "spec": "[21.1.66,)"
                },
                "side": "client"
              },
              {
                "id": "embeddium",
                "kind": "optional",
                "range": {
                  "dialect": "maven",
                  "spec": "[0.3.25,)"
                },
                "side": "client"
              },
              {
                "id": "sodium",
                "kind": "optional",
                "range": {
                  "dialect": "maven",
                  "spec": "[0.6.0-beta.2,)"
                },
                "side": "client"
              }
            ],
            "minecraft": {
              "dialect": "maven",
              "spec": "[1.21.1,1.21.2)"
            },
            "loaderVersion": {
              "dialect": "maven",
              "spec": "[21.1.66,)"
            },
            "mixins": [
              "flywheel.backend.mixins.json",
              "flywheel.impl.mixins.json",
              "flywheel.impl.neoforge.mixins.json"
            ]
          }
        ],
        "languageLoader": {
          "name": "javafml",
          "version": {
            "dialect": "maven",
            "spec": "[0,)"
          }
        },
        "manifest": {},
        "classVersion": {
          "major": 65,
          "minor": 0
        }
      }
    },
    {
      "path": "META-INF/jarjar/ponder-neoforge-1.0.82+mc1.21.1.jar",
      "declaredBy": "jarJarMetadata",
      "jarjar": {
        "group": "net.createmod.ponder",
        "artifact": "ponder-neoforge",
        "artifactVersion": "1.0.82+mc1.21.1",
        "range": {
          "dialect": "maven",
          "spec": "[1.0.82+mc1.21.1,)"
        }
      },
      "metadata": {
        "descriptors": [
          "neoForgeModsToml",
          "manifest"
        ],
        "mods": [
          {
            "source": "neoForgeModsToml",
            "loader": "neoForge",
            "id": "ponder",
            "version": "1.0.82+mc1.21.1",
            "name": "Ponder",
            "description": "Visual in-Game Documentation",
            "authors": [
              "simibubi, Pepper, zelophed"
            ],
            "licenses": [
              "MIT"
            ],
            "dependencies": [
              {
                "id": "neoforge",
                "kind": "required",
                "range": {
                  "dialect": "maven",
                  "spec": "[21.1.206,)"
                }
              },
              {
                "id": "minecraft",
                "kind": "required",
                "range": {
                  "dialect": "maven",
                  "spec": "[1.21.1]"
                }
              },
              {
                "id": "flywheel",
                "kind": "required",
                "range": {
                  "dialect": "maven",
                  "spec": "[1.0.0,2.0)"
                },
                "side": "client",
                "ordering": "after"
              }
            ],
            "minecraft": {
              "dialect": "maven",
              "spec": "[1.21.1]"
            },
            "loaderVersion": {
              "dialect": "maven",
              "spec": "[21.1.206,)"
            },
            "mixins": [
              "ponder.mixins.json",
              "ponder-common.mixins.json"
            ]
          }
        ],
        "languageLoader": {
          "name": "javafml",
          "version": {
            "dialect": "maven",
            "spec": "[0,)"
          }
        },
        "manifest": {
          "implementationTitle": "neoforge",
          "implementationVersion": "1.0.82+mc1.21.1"
        },
        "classVersion": {
          "major": 65,
          "minor": 0
        }
      }
    }
  ]
}
